# Hermes-Computer-Use

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: stream_agent.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  config.rs  cron_jobs.rs  files.rs  memories.rs  mod.rs  monitor.rs  platforms.rs  sessions.rs  skills.rs  system.rs  utils.rs
src-tauri/~/.hermes/: config.yaml
src/components/: ChatSessionHeader.tsx  ErrorBoundary.tsx  index.ts
src/hooks/: index.ts  useKeyboardShortcuts.ts  useTranslation.ts
src/lib/: i18n.ts  logger.ts  tauri.ts
src/pages/: index.ts
src/services/: analyticsApi.ts  api.ts  apiClient.ts  cronJobsApi.ts  filesApi.ts  hermesChat.ts  index.ts  memoryApi.ts  monitorApi.ts  notifications.ts  platformApi.ts  sessionApi.ts  settingsApi.ts  skillsApi.ts  statusApi.ts  updateApi.ts
src/stores/: chatStore.ts  cronJobsStore.ts  dashboardStore.ts  filesStore.ts  index.ts  memoryStore.ts  monitorStore.ts  navigationStore.ts  platformStore.ts  platformStore.tsx  sessionStore.ts  settingsStore.ts  skillsStore.ts  themeStore.ts  toastStore.ts
src/styles/: globals.css
src/test/: setup.ts
src/types/: analytics.ts  common.ts  config.ts  cron.ts  files.ts  index.ts  memory.ts  monitor.ts  navigation.ts  session.ts  (+3 more)
(+77 files in other folders)
