[package]
name = "hermes-computer-use"
version = "0.1.1"
description = "Hermes Computer Use - Desktop management application for Hermes Agent"
authors = ["Crown_22"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Crown-22/Hermes-Computer-Use"
readme = "README.md"
keywords = ["hermes", "ai", "agent", "desktop", "tauri", "computer-use"]
categories = ["gui", "development-tools"]

# Hide console window on Windows
[[bin]]
name = "hermes-computer-use"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hermes_computer_use_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }

